# localgpt

./: LICENSE  README.md  launchapp.sh  pyproject.toml
app/: chat_app.py  multi_app.py
app/_exp/: multi_app.py
localgpt/: utils.py
localgpt/conversation/: builder.py  conversation.py
localgpt/interface/: multi_app.py  privategpt.py  utils.py
localgpt/memory/: sqlite.py  tinydb.py
