[tool.poetry]
name = "localgpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.0"
click = "^8.1.3"
langchain = "^0.0.221"
openai = "^0.27.8"
tinydb = "^4.8.0"
streamlit-option-menu = "^0.3.6"
tomli = "^2.0.1"
hydralit = "^1.0.14"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
localgpt = "localgpt.cli.entrypoint:main"