[tool.poetry]
name = "localgpt"
version = "0.1.0"
description = "Just another streamlit app for ChatGPT"
authors = ["M. Gil Valverde <m.gilvalverde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.0"
langchain = "^0.0.221"
openai = "^0.27.8"
tinydb = "^4.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
localgpt = "localgpt.cli.entrypoint:main"